syntax = "proto3";

package anyon.authmanager.v1.Gateway;

service Gateway {
    rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
}
