syntax = "proto3";

package anyon.public.snowflake;

option go_package = "/pbsnow";

message Instruction {
    string symbol = 1;
    message Parameter {
        string name = 1;
        float value = 2;
    }
    repeated Parameter parameters = 2;
    repeated uint64 qubits = 3;
    repeated uint64 classical_bits = 4;
}

message Circuit {
    repeated Instruction instructions = 1;
}

message Result {
    repeated string shot_read_out = 1;
}
