syntax = "proto3";

import "circuit.proto";

package anyon.public.snowflake;

option go_package = "/pbsnow";

service CircuitAPI {
    rpc submitJob(SubmitJobRequest) returns (SubmitJobReply) {}
    rpc getJobStatus(JobStatusRequest) returns (JobStatusReply) {}
    rpc getJobResult(JobResultRequest) returns (JobResultReply) {}
}

message CircuitJobStatus {
    enum CircuitJobStatusType {
        UNKNOWN = 0;
        QUEUED = 1;
        RUNNING=2;
        COMPLETED=3;
        FAILED=4;
        CANCELED=5;
    }
    CircuitJobStatusType type = 1;
    string message = 2;
}

message SubmitJobRequest {
    Circuit circuit = 1;
    uint64 shots_count = 2;
    string owner=3;
    string token=4;
}

message SubmitJobReply {
    string job_uuid = 1;
    CircuitJobStatus status = 2;
    string error = 3;
}

message JobStatusRequest {
    string job_uuid = 1;
    string owner=2;
    string token=3;
}

message JobStatusReply {
    string job_uuid = 1;
    CircuitJobStatus status=2;
    string error = 3;
}

message JobResultRequest {
    string job_uuid = 1;
    string owner=2;
    string token=3;
}

message JobResultReply {
    string job_uuid = 1;
    repeated Result results = 2;
    CircuitJobStatus status = 3;
    string error = 4;
}
